# tiny-oled.firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  avr-toolchain.sh
.github/workflows/: c-cpp.yml
inc/: boot.h  climate.h  display.h  main.h  pins.h  spi.h  telemetry.h  tick.h  uart.h  ws2812_config.h
inc/sd/: pffconf.h
inc/usb/: LUFAConfig.h  descriptors.h  usb.h
src/: boot.c  climate.c  display.c  main.c  spi.c  telemetry.c  tick.c  uart.c
src/sd/: diskio.c  usr_pff.c
src/usb/: descriptors.c  usb.c
tests/: project.yml
tests/test/: test_boot.c  test_spi.c
